feat: 新增 FriendlyErrorsWebpackPlugin/ManifestPlugin/SpeedMeasurePlugin

--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -1,3 +1,13 @@
 body {
   color: red;
+  text-align: center;
+  img {
+    height: 20vh;
+  }
+  .img {
+    width: 100vw;
+    height: 20vh;
+    background: url('../../assets/images/tree.png') no-repeat center;
+    background-size: contain;
+  }
 }
